# wakeword-training-platform

./: .cache_ggshield  .dockerignore  .env.example  .env.zai  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACTION_PLAN.md  AGENTS.md  CLAUDE.md  CONFIG_GUIDE.md  CONFIG_PRESETS_GUIDE.md  Colab_Training_Platform.ipynb  DEVELOPMENT_ROADMAP.md  DISTRIBUTED_CASCADE_GUIDE.md  DOCUMENTATION.md  Dockerfile  FEATURE_CHECKLIST.md  GEMINI.md  GUIDE.md  INDUSTRIAL_STANDARD_UPGRADE_PLAN.md  Jupyter_Quickstart.ipynb  Makefile  NEW_FEATURES_GUIDE.md  README.md  TECHNICAL_FEATURES.md  TRAINING_GUIDE.md  actual-review.md  check_imports.py  convert_mobilenet_rpi.py  dataset-csv-creator.py  debug_trainer.py  docker-compose.yml  entrypoint.sh  find_low_quality_folders.py  golden-ratios.md  move_low_quality_files.py  pr16_files.txt  pr17_files.txt  (+15 more)
.claude/: settings.json
.claude-flow/metrics/: performance.json  task-metrics.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
.serena/: project.yml
.serena/memories/: project_context.md
.swarm/: memory.db  memory.db-shm  memory.db-wal
agents/: ml-developer.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
configs/: config_20251129_171710.yaml  config_20251130_080032.yaml  config_20251226_140753.yaml  esp32s3_best_params.yaml
dev_roadmap/docs/: DISTILLATION_FIX_NOTES.md  DISTILLATION_REVIEW_REPORT.md  HPO_PROFILES_GUIDE.md  actual-review.md  best trial-2.txt  current_dataset_info.json  distillation_files_summary.md  distillation_quick_reference.md  hpo_migration_guide.md  hpo_optimization_analysis.md  knowledge_distillation_guide.md  review-actions.md
docs/: #PR_1_REVISED_ACTION_PLAN.md  BACKLOG.md  CLAUDE_IMPROVEMENT_PLAN.md  CODE_ANALYSIS_REPORT.md  CODE_REVIEW_REPORT.md  CONFIG_PRESETS_GUIDE.md  CONSOLIDATED_ACTION_PLAN.md  DEVELOPMENT_ROADMAP.md  DISTRIBUTED_CASCADE_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_COMPLETE.md  EXPERT_DISTILLATION_GUIDE.md  FNR_OPTIMIZATION_CHANGES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  INTEGRATION_COMPLETE.md  PR19_Comments_Analysis_Report.md  PR19_Implementation_Summary.md  PR_1_ACTION_PLAN.md  QUICK_REFERENCE.md  RIR_NPY_Enhancement_Plan.md  RIR_NPY_Implementation_Summary.md  TECHNICAL_DESIGN_DATA_REFACTOR.md  UI_INTEGRATION_COMPLETE_2.md  UI_Integration_Complete.md  google_improvements_plan.md  implementation_plan.md  p3_code_quality_report.md  review-actions.md  wakeword_project_analysis_report.md
examples/: compare_with_without_distillation.py  train_with_distillation.py
exports/1/: New Text Document.txt
flows/: deep-audit.json
helper_scripts/: check_imports.py  move_files.ps1  rename.py
scripts/: benchmark_focal_qat.py  compare_with_without_distillation.py  convert_mobilenet_rpi.py  extract_hard_negatives.py  save_hpo_profiles.py  test_augmentation_coverage.py  train_with_distillation.py  training_insights.py  verify_qat.py
scripts/helper_scripts/: 22050_remover.py  22050to16000.py  audio_convert_16k16bit_mono.py  check_imports.py  crop.py  dataset_report.py  dataset_sampler.py  debug_trainer.py  duplicates.py  duration_shortener.py  fast_delete_windows.py  filter_background_silent.py  find_low_quality_folders.py  move_files.ps1  move_low_quality_files.py  move_silent.py  namechanger.py  quality_warning.py  remove_all_rirs.py  rename.py  rir_filter.py  sample_manifest.csv  simple_move_files.py  smart_silent_categorizer.py  trim_dataset.py  x.py
server/: .env.example  Dockerfile  app.py  inference_engine.py  requirements.txt
src/: exceptions.py  security.py
src/config/: cuda_utils.py  dataset_config_validator.py  defaults.py  env_config.py  logger.py  paths.py  platform_constraints.py  presets.py  pydantic_validator.py  seed_utils.py  size_calculator.py  validator.py
src/data/: __init__.py  audio_utils.py  augmentation.py  balanced_sampler.py  batch_feature_extractor.py  cmvn.py  dataset.py  feature_extraction.py  file_cache.py  health_checker.py  npy_extractor.py  preprocessing.py  processor.py  splitter.py  vad.py
src/evaluation/: __init__.py  advanced_evaluator.py  background_miner.py  benchmarking.py  data_collector.py  dataset_evaluator.py  evaluator.py  file_evaluator.py  inference.py  judge_client.py  metrics.py  mining.py  stages.py  streaming_detector.py  types.py
src/export/: __init__.py  onnx_exporter.py
src/models/: __init__.py  architectures.py  huggingface.py  losses.py  temperature_scaling.py
src/training/: __init__.py  advanced_metrics.py  checkpoint.py  checkpoint_manager.py  distillation_trainer.py  ema.py  hpo.py  hpo_results.py  lr_finder.py  metrics.py  optimizer_factory.py  qat_utils.py  trainer.py  training_loop.py  wandb_callback.py
src/ui/: app.py  panel_config.py  panel_dataset.py  panel_docs.py  panel_evaluation.py  panel_export.py  panel_training.py
test_exports/tflite_export/: fingerprint.pb
tests/: __init__.py  benchmark_hpo.py  conftest.py  reproduce_fnr.py  reproduce_qat_mismatch.py  test_augmentation_advanced.py  test_background_mining.py  test_benchmarking.py  test_cascade_interfaces.py  test_config.py  test_conformer_model.py  test_connection_reset_suppression.py  test_data_collector.py  test_dataset_config_update.py  test_dataset_config_validator.py  test_distillation_config.py  test_distillation_pipeline.py  test_distillation_projectors.py  test_distillation_security.py  test_distillation_stability.py  test_distillation_trainer.py  test_docker_persistence.py  test_dual_distillation.py  test_dual_teacher_config.py  test_dynamic_dimensions.py  test_dynamic_model_config.py  test_dynamic_weighting.py  test_e2e_debug_suite.py  test_env_config.py  test_evaluation_metrics.py  test_expert_layers.py  test_export_esphome.py  test_export_size_warning.py  test_feature_scaling_cmvn.py  test_focal_loss_advanced.py  test_full_optimization_integration.py  test_gpu_performance.py  test_hard_negative_mining.py  test_hard_negatives.py  test_hpo_e2e.py  (+41 more)
tests/benchmarks/: test_inference_speed.py
(+95 files in other folders)
