[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wakeword-training-platform"
version = "2.0.0"
description = "Production-ready GPU-accelerated wakeword training platform with Gradio UI"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sarpel", email = "contact@sarpel.net"}
]
maintainers = [
    {name = "Sarpel", email = "contact@sarpel.net"}
]
keywords = [
    "wakeword",
    "wake-word",
    "hotword",
    "voice-activation",
    "speech-recognition",
    "keyword-spotting",
    "pytorch",
    "deep-learning",
    "audio-classification",
    "gradio",
    "gpu-acceleration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8",
    "Framework :: Gradio",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.20.0",
    "websockets>=10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.0",
    "resampy>=0.4.0",
    "audioread>=3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "pydantic>=2.5.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
    "tensorboard>=2.13.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "colorama>=0.4.0",
    "structlog>=23.2.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
experiment = [
    "wandb>=0.16.0",
    "optuna>=3.4.0",
]
all = [
    "wakeword-training-platform[gpu,dev,docs,experiment]",
]

[project.urls]
Homepage = "https://github.com/sarpel/wakeword-training-platform"
Documentation = "https://github.com/sarpel/wakeword-training-platform#readme"
Repository = "https://github.com/sarpel/wakeword-training-platform.git"
Issues = "https://github.com/sarpel/wakeword-training-platform/issues"
Changelog = "https://github.com/sarpel/wakeword-training-platform/releases"

[project.scripts]
wakeword-train = "src.ui.app:launch_app"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
src = ["config/*.yaml", "ui/assets/*"]

# ==============================================================================
# Tool Configurations
# ==============================================================================

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.mypy_cache
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", "venv", "__pycache__", ".git"]
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "src.config.dataset_config_validator"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.training.distillation_trainer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.training.trainer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.training.advanced_metrics"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.evaluation.dataset_evaluator"
ignore_missing_imports = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = "src.ui.panel_training"
ignore_missing_imports = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = "src.evaluation.metrics"
ignore_missing_imports = true
disable_errors = ["no-any-return", "return-value", "var-annotated", "arg-type"]

[[tool.mypy.overrides]]
module = "src.evaluation.benchmarking"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.data.balanced_sampler"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.models.architectures"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.data.audio_utils"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.config.size_calculator"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.config.dataset_config_validator"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.training.distillation_trainer"
ignore_missing_imports = true
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.training.trainer"
ignore_missing_imports = true
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.training.advanced_metrics"
ignore_missing_imports = true
disable_errors = ["arg-type"]

[[tool.mypy.overrides]]
module = "src.evaluation.dataset_evaluator"
ignore_missing_imports = true
allow_redefinition = true
disable_errors = ["assignment", "return-value"]

[[tool.mypy.overrides]]
module = "src.ui.panel_training"
ignore_missing_imports = true
allow_redefinition = true
disable_errors = ["assignment", "attr-defined"]

[[tool.mypy.overrides]]
module = "src.data.dataset"
ignore_missing_imports = true
disable_errors = ["assignment"]


[[tool.mypy.overrides]]
module = "src.evaluation.benchmarking"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.data.balanced_sampler"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.models.architectures"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.data.audio_utils"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.config.size_calculator"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.config.dataset_config_validator"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.evaluation.dataset_evaluator"
ignore_missing_imports = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = "src.evaluation.metrics"
disable_errors = ["no-any-return", "return-value", "var-annotated", "arg-type"]

[[tool.mypy.overrides]]
module = "src.evaluation.benchmarking"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.data.balanced_sampler"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.models.architectures"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.data.audio_utils"
disable_errors = ["no-any-return"]
[[tool.mypy.overrides]]
module = "src.training.trainer"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.training.distillation_trainer"
disable_errors = ["no-any-return"]

[[tool.mypy.overrides]]
module = "src.training.advanced_metrics"
disable_errors = ["arg-type"]

[[tool.mypy.overrides]]
module = "src.evaluation.dataset_evaluator"
disable_errors = ["assignment"]

[[tool.mypy.overrides]]
module = "src.data.dataset"
disable_errors = ["assignment"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -ra"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "gpu: Tests requiring CUDA GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
precision = 2
show_missing = true
